--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   sqflite: ^1.1.0
   path_provider: ^0.5.0+1
+  sprintf: ^4.0.2
+  flutter_markdown: ^0.2.0
 
 dev_dependencies:
   flutter_test:
